--- a/src/VNEDC/bases/templates/bases/base.html
+++ b/src/VNEDC/bases/templates/bases/base.html
@@ -82,6 +82,7 @@
             {% endblock %}
         </div>
     </div>
+
     <script>
         document.getElementById('toggle-btn').addEventListener('click', function () {
             var sidebar = document.getElementById('sidebar');
@@ -91,5 +92,7 @@
             content.classList.toggle('expanded');
         });
     </script>
+    {% block alert %} {% endblock %}
+
 </body>
 </html>
