--- a/src/VNEDC/warehouse/templates/warehouse/area/area_by_warehouse.html
+++ b/src/VNEDC/warehouse/templates/warehouse/area/area_by_warehouse.html
@@ -1,10 +1,115 @@
-{% extends 'bases/base.html' %}
-{% load static %}
+{% extends 'warehouse/bases/base.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
 {% load i18n %}
-{% block title %} Area List By Warehouse {% endblock %}
-{% block javascript %}
-    <script>
+{% block title %} {% trans "Area List By Warehouse" %} {% endblock %}
+{% block base_js %}
+{{ block.super }}
+<!-- Bootstrap CSS -->
+<style>
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    td {
+        cursor: pointer; /* Thêm con trỏ chuột dạng pointer */
+        transition: background-color 0.3s ease; /* Hiệu ứng nền khi hover */
+    }
+
+    td:hover {
+        {#background-color: #fdf0cb;#}
+        color: #ff2b3b; /* Màu chữ khi hover */
+    }
+</style>
+
+{% endblock %}
+
+{% block container %}
+    <div class="container mt-5">
+        <div class="row">
+            {% block sidebar %} {{ block.super }} {% endblock %}
+            {% block content %}
+            <div class="col-sm-9" style="border: 1px #6c757d solid; height: 90vh;">
+                <h2 class="mb-4">{% trans "Area List By Warehouse" %}</h2>
+                <div class="row d-flex justify-content-center">
+                    <a class="btn btn-primary mb-3" style="width: 80px" href="{% url 'area_create' wh_code %}" role="button">{% trans "Add" %}</a>
+                    <a class="btn btn-secondary mb-3 ms-5" style="width: auto" href="{% url 'warehouse_index' %}" role="button">{% trans "Back to List" %}</a>
+
+                </div>
+                <!-- Kiểm tra nếu có dữ liệu -->
+                {% if areas %}
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>{% trans "Area Id" %}</th>
+                            <th>{% trans "Area Name" %}</th>
+                            <th>{% trans "Warehouse Id" %}</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Lặp qua danh sách warehouse -->
+                        {% for area in areas %}
+                        <tr>
+                            <td>{{ forloop.counter }}</td>
+                            <td onclick="redirectToPage('{% url 'bin_by_area' area_code=area.area_id %}')">{{ area.area_id }}</td>
+                            <td onclick="redirectToPage('{% url 'bin_by_area' area_code=area.area_id %}')">{{ area.area_name }}</td>
+                            <td onclick="redirectToPage('{% url 'bin_by_area' area_code=area.area_id %}')">{{ area.warehouse }}</td>
+                            <td>
+                                {% if area.area_id %}
+                                    <a class="btn btn-primary" style="width: 70px" href="{% url 'edit_area' area_code=area.area_id %}" role="button">{% trans "Edit" %}</a>
+                                     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"
+                                            data-area-id="{{ area.pk }}" data-area-name="{{ area.area_id }}">
+                                        {% trans "Delete" %}
+                                    </button>
+
+                                {% else %}
+                                    <a class="btn btn-primary" style="width: 70px" href="#" role="button">{% trans "Edit" %}</a>
+                                    <a class="btn btn-primary" style="width: 70px" href="#" role="button">{% trans "Delete" %}</a>
+                                {% endif %}
+
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% else %}
+                <p>No area found.</p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{#    Modal#}
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteModalLabel">{% trans "Confirm Delete" %}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    {% trans "Are you sure you want to delete the area" %} "<strong id="modalAreaName"></strong>"?
+                </div>
+                <div class="modal-footer">
+                    <form method="post" id="deleteForm">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">{% trans "Yes, Delete" %}</button>
+                    </form>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{% trans "Cancel" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
+
+
+{% block alert %}
+        <script>
         // Dynamic data injection into modal
         const deleteModal = document.getElementById('deleteModal');
         deleteModal.addEventListener('show.bs.modal', function (event) {
@@ -18,7 +123,7 @@
 
             // Update form action dynamically
             const deleteForm = document.getElementById('deleteForm');
-            deleteForm.action = `/area/delete/${areaId}/`;
+            deleteForm.action = `/warehouse/area/delete/${areaId}/`;
         });
     </script>
 
@@ -29,82 +134,6 @@
     }
     </script>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-{% endblock %}
-
-{% block content %}
-        <div class="col-sm-9" style="border: 1px #6c757d solid; height: 90vh;">
-            <h2 class="mb-4">Area List By Warehouse</h2>
-            <div class="row d-flex justify-content-center">
-                <a class="btn btn-primary mb-3" style="width: 80px" href="{% url 'area_create' wh_code %}" role="button">Add</a>
-                <a class="btn btn-secondary mb-3 ms-5" style="width: auto" href="/warehouse/list/" role="button">Back to List</a>
-
-            </div>
-            <!-- Kiểm tra nếu có dữ liệu -->
-            {% if areas %}
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Area Id</th>
-                        <th>Area Name</th>
-                        <th>Warehouse Id</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Lặp qua danh sách warehouse -->
-                    {% for area in areas %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td onclick="redirectToPage('{% url 'bin_by_area' area_code=area.area_id %}')">{{ area.area_id }}</td>
-                        <td onclick="redirectToPage('{% url 'bin_by_area' area_code=area.area_id %}')">{{ area.area_name }}</td>
-                        <td onclick="redirectToPage('{% url 'bin_by_area' area_code=area.area_id %}')">{{ area.warehouse }}</td>
-                        <td>
-                            {% if area.area_id %}
-                                <a class="btn btn-primary" style="width: 70px" href="{% url 'edit_area' area_code=area.area_id %}" role="button">Edit</a>
-                                 <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"
-                                        data-area-id="{{ area.pk }}" data-area-name="{{ area.area_id }}">
-                                    Delete
-                                </button>
-
-                            {% else %}
-                                <a class="btn btn-primary" style="width: 70px" href="#" role="button">Edit</a>
-                                <a class="btn btn-primary" style="width: 70px" href="#" role="button">Delete</a>
-                            {% endif %}
-
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            {% else %}
-            <p>No area found.</p>
-            {% endif %}
-        </div>
-    </div>
-</div>
-
-{#    Modal#}
-    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete the area "<strong id="modalAreaName"></strong>"?
-                </div>
-                <div class="modal-footer">
-                    <form method="post" id="deleteForm">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Yes, Delete</button>
-                    </form>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 {% endblock %}
 
