--- a/src/VNEDC/warehouse/templates/warehouse/area/edit_area.html
+++ b/src/VNEDC/warehouse/templates/warehouse/area/edit_area.html
@@ -1,52 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Area</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-{% load widget_tweaks %}
-    <div class="container mt-5">
-        <h2 class="mb-4">Edit Area</h2>
+{% extends 'warehouse/bases/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% load i18n %}
+{% block title %} {% trans "Edit Warehouse" %} {% endblock %}
+{% block container %}
 
-        <!-- Hiển thị thông báo thành công hoặc lỗi -->
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
+    <div class="container mt-5">
+        <div class="row">
+            {% block sidebar %} {{ block.super }} {% endblock %}
+{#        <!-- Hiển thị thông báo thành công hoặc lỗi -->#}
+{#        {% if messages %}#}
+{#            {% for message in messages %}#}
+{#                <div class="alert alert-{{ message.tags }}">#}
+{#                    {{ message }}#}
+{#                </div>#}
+{#            {% endfor %}#}
+{#        {% endif %}#}
 
         <!-- Form để chỉnh sửa kho -->
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="area_id" class="form-label" disabled="">Area Id</label>
-                {{ form.area_id|attr:"readonly:readonly" }}
-                <div class="text-danger">{{ form.area_id.errors }}</div>
-            </div>
+            {% block content %}
+            <form method="post" enctype="multipart/form-data" class="col-sm-9">
+                {% csrf_token %}
+                <div class="card p-4">
+                    <h3 class="card-title">{% trans "Edit Warehouse" %}</h3>
+                    <div class="mb-3">
+                        <label for="wh_code" class="form-label" disabled=""></label>
+    {#                    {% if is_readonly %}#}
+    {#                        {{ form.wh_code|add_attr:"readonly:readonly" }}#}
+    {#                    {% else %}#}
+    {#                    {% endif %}#}
+                                            {{ form.area_id }}
+    {#                    {{ form.wh_code|attr:"readonly:readonly" }}#}
+                        <div class="text-danger">{{ form.area_id.errors }}</div>
+                    </div>
 
-            <div class="mb-3">
-                <label for="area_name" class="form-label">Area Name</label>
-                {{ form.area_name }}
-                <div class="text-danger">{{ form.area_name.errors }}</div>
-            </div>
+                    <div class="mb-3">
+                        <label for="wh_name" class="form-label">{% trans "Area Name" %}</label>
+                        {{ form.area_name }}
+                        <div class="text-danger">{{ form.area_name.errors }}</div>
+                    </div>
 
-            <div class="mb-3">
-                <label for="wh_code" class="form-label">Warehouse Id</label>
-                {{ form.warehouse }}
-                <div class="text-danger">{{ form.warehouse.errors }}</div>
-            </div>
+                    <div class="mb-3">
+                        <label for="wh_bg" class="form-label">{% trans "Warehouse Id" %}</label>
+                        {{ form.warehouse }}
+                        <div class="text-danger">{{ form.warehouse.errors }}</div>
+                    </div>
 
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-        </form>
+                    <button type="submit" class="btn btn-success">{% trans "Save Changes" %}</button>
+                </div>
+            </form>
 
-        <a href="{% url 'area_list' %}" class="btn btn-secondary mt-3">Back to List</a>
+            {% endblock %}
+            <a href="{% url 'area_list' %}" class="btn btn-secondary mt-3">{% trans "Back to List" %}</a>
     </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
+
