--- a/src/VNEDC/warehouse/templates/warehouse/bin/create_bin.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bin/create_bin.html
@@ -1,76 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Bin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
+{% extends 'warehouse/bases/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% load i18n %}
+{% block title %} {% trans "Create Warehouse" %} {% endblock %}
+{% block container %}
     <div class="container mt-5">
         <div class="row">
-            <div class="col-sm-3">
-                <div class="list-group">
-                    <a class="btn btn-primary" href="{% url 'warehouse_list' %}" role="button" style="margin-bottom: 20px">Warehouse</a>
-                    <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">包材倉1F</a>
-                    <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">成品倉</a>
-                    <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">半成品倉</a>
-                    <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">手模倉</a>
+            {% block sidebar %} {{ block.super }} {% endblock %}
+            {% block content %}
+                        <form method="post" enctype="multipart/form-data" class="col-sm-9">
+                        {% csrf_token %}
+                        <div class="card p-4">
+                            <h3 class="card-title">{% trans "Create Bin" %}</h3>
+                            <div class="mb-3">
+                                <label for="bin_id" class="form-label">{% trans "Bin Id" %}</label>
+                                {{ form.bin_id }}
+                                <div class="text-danger">{{ form.bin_id.errors }}</div>
+
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="bin_name" class="form-label">{% trans "Bin Name" %}</label>
+                                {{ form.bin_name }}
+                                <div class="text-danger">{{ form.bin_name.errors }}</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="area_id" class="form-label">{% trans "Area Id" %}</label>
+                                {{ form.area }}
+                                <div class="text-danger">{{ form.area.errors }}</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="pos_x" class="form-label">{% trans "Position X" %}</label>
+                                {{ form.pos_x }}
+                                <div class="text-danger">{{ form.pos_x.errors }}</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="pos_y" class="form-label">{% trans "Position Y" %}</label>
+                                {{ form.pos_y }}
+                                <div class="text-danger">{{ form.pos_y.errors }}</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="pos_y" class="form-label">{% trans "Bin Width" %}</label>
+                                {{ form.bin_w }}
+                                <div class="text-danger">{{ form.bin_w.errors }}</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="pos_y" class="form-label">{% trans "Bin Length" %}</label>
+                                {{ form.bin_l }}
+                                <div class="text-danger">{{ form.bin_l.errors }}</div>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary">{% trans "Submit" %}</button>
+                        </div>
+                    </form>
                 </div>
             </div>
-            <form method="post" enctype="multipart/form-data" class="col-sm-9">
-                {% csrf_token %}
-                <div class="card p-4">
-                    <h3 class="card-title">Create Bin</h3>
-                    <div class="mb-3">
-                        <label for="bin_id" class="form-label">Bin Id</label>
-                        {{ form.bin_id }}
-                        <div class="text-danger">{{ form.bin_id.errors }}</div>
 
-                    </div>
+{% endblock %}
+{% endblock %}
 
-                    <div class="mb-3">
-                        <label for="bin_name" class="form-label">Bin Name</label>
-                        {{ form.bin_name }}
-                        <div class="text-danger">{{ form.bin_name.errors }}</div>
-                    </div>
+    {% block js %} {{ block.super }} {% endblock %}
 
-                    <div class="mb-3">
-                        <label for="area_id" class="form-label">Area Id</label>
-                        {{ form.area }}
-                        <div class="text-danger">{{ form.area.errors }}</div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="pos_x" class="form-label">Position X</label>
-                        {{ form.pos_x }}
-                        <div class="text-danger">{{ form.pos_x.errors }}</div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="pos_y" class="form-label">Position Y</label>
-                        {{ form.pos_y }}
-                        <div class="text-danger">{{ form.pos_y.errors }}</div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="pos_y" class="form-label">Bin Width</label>
-                        {{ form.bin_w }}
-                        <div class="text-danger">{{ form.bin_w.errors }}</div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="pos_y" class="form-label">Bin Length</label>
-                        {{ form.bin_l }}
-                        <div class="text-danger">{{ form.bin_l.errors }}</div>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
-</html>
