--- a/src/VNEDC/warehouse/templates/warehouse/bin/edit_bin.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bin/edit_bin.html
@@ -1,77 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Bin</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-{% load widget_tweaks %}
-    <div class="container mt-5">
-        <h2 class="mb-4">Edit Bin</h2>
+{% extends 'warehouse/bases/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% load i18n %}
+{% block title %} {% trans "Edit Bin" %} {% endblock %}
+{% block container %}
 
-        <!-- Hiển thị thông báo thành công hoặc lỗi -->
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
+    <div class="container mt-5">
+        <div class="row">
+            {% block sidebar %} {{ block.super }} {% endblock %}
+{#        <!-- Hiển thị thông báo thành công hoặc lỗi -->#}
+{#        {% if messages %}#}
+{#            {% for message in messages %}#}
+{#                <div class="alert alert-{{ message.tags }}">#}
+{#                    {{ message }}#}
+{#                </div>#}
+{#            {% endfor %}#}
+{#        {% endif %}#}
 
         <!-- Form để chỉnh sửa kho -->
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="bin_id" class="form-label" disabled="">Bin Id</label>
-                {{ form.bin_id|attr:"readonly:readonly" }}
-                <div class="text-danger">{{ form.bin_id.errors }}</div>
-            </div>
+            {% block content %}
+            <form method="post" enctype="multipart/form-data" class="col-sm-9">
+                {% csrf_token %}
+                <div class="card p-4">
+                    <h3 class="card-title">{% trans "Edit Bin" %}</h3>
+                    <div class="mb-3">
+                    <label for="bin_id" class="form-label" disabled="">{% trans "Bin Id" %}</label>
+{#                    {{ form.bin_id|attr:"readonly:readonly" }}#}
+                        {{ form.bin_id }}
+                    <div class="text-danger">{{ form.bin_id.errors }}</div>
+                </div>
 
-            <div class="mb-3">
-                <label for="bin_name" class="form-label">Bin Name</label>
-                {{ form.bin_name }}
-                <div class="text-danger">{{ form.bin_name.errors }}</div>
-            </div>
+                <div class="mb-3">
+                    <label for="bin_name" class="form-label">{% trans "Bin Name" %}</label>
+                    {{ form.bin_name }}
+                    <div class="text-danger">{{ form.bin_name.errors }}</div>
+                </div>
 
-            <div class="mb-3">
-                <label for="area_id" class="form-label">Area Id</label>
-                {{ form.area }}
-                <div class="text-danger">{{ form.area.errors }}</div>
-            </div>
+                <div class="mb-3">
+                    <label for="area_id" class="form-label">{% trans "Area Id" %}</label>
+                    {{ form.area }}
+                    <div class="text-danger">{{ form.area.errors }}</div>
+                </div>
 
-            <div class="mb-3">
-                <label for="pos_x" class="form-label">Position X</label>
-                {{ form.pos_x }}
-                <div class="text-danger">{{ form.pos_x.errors }}</div>
-            </div>
+                <div class="mb-3">
+                    <label for="pos_x" class="form-label">{% trans "Position X" %}</label>
+                    {{ form.pos_x }}
+                    <div class="text-danger">{{ form.pos_x.errors }}</div>
+                </div>
 
-            <div class="mb-3">
-                <label for="pos_y" class="form-label">Position Y</label>
-                {{ form.pos_y }}
-                <div class="text-danger">{{ form.pos_y.errors }}</div>
-            </div>
+                <div class="mb-3">
+                    <label for="pos_y" class="form-label">{% trans "Position Y" %}</label>
+                    {{ form.pos_y }}
+                    <div class="text-danger">{{ form.pos_y.errors }}</div>
+                </div>
 
-            <div class="mb-3">
-                <label for="pos_y" class="form-label">Bin Width</label>
-                {{ form.bin_w }}
-                <div class="text-danger">{{ form.bin_w.errors }}</div>
-            </div>
+                <div class="mb-3">
+                    <label for="pos_y" class="form-label">{% trans "Bin Width" %}</label>
+                    {{ form.bin_w }}
+                    <div class="text-danger">{{ form.bin_w.errors }}</div>
+                </div>
 
-            <div class="mb-3">
-                <label for="pos_y" class="form-label">Bin Length</label>
-                {{ form.bin_l }}
-                <div class="text-danger">{{ form.bin_l.errors }}</div>
-            </div>
+                <div class="mb-3">
+                    <label for="pos_y" class="form-label">{% trans "Bin Length" %}</label>
+                    {{ form.bin_l }}
+                    <div class="text-danger">{{ form.bin_l.errors }}</div>
+                </div>
 
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-            <a href="{% url 'bin_list' %}" class="btn btn-secondary ms-3">Back to List</a>
+                    <button type="submit" class="btn btn-success">{% trans "Save Changes" %}</button>
+                </div>
+            </form>
 
-        </form>
-
+            {% endblock %}
+            <a href="{% url 'bin_by_area' area_code %}" class="btn btn-secondary mt-3">{% trans "Back to List" %}</a>
     </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+{% endblock %}
