--- a/src/VNEDC/warehouse/templates/warehouse/create_warehouse.html
+++ b/src/VNEDC/warehouse/templates/warehouse/create_warehouse.html
@@ -1,41 +1,50 @@
-{% extends 'bases/crud_form.html' %}
+{% extends 'warehouse/bases/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% load i18n %}
-{% block title %} Create Warehouse {% endblock %}
+{% block title %} {% trans "Create Warehouse" %} {% endblock %}
+{% block container %}
+    <div class="container mt-5">
+        <div class="row">
+            {% block sidebar %} {{ block.super }} {% endblock %}
+            {% block content %}
+                <form method="post" enctype="multipart/form-data" class="col-sm-9">
+                    {% csrf_token %}
+                    <div class="card p-4">
+                        <h3 class="card-title">{% trans "Create Warehouse" %}</h3>
+                        <div class="mb-3">
+                            <label for="wh_code" class="form-label">{% trans "Warehouse Code" %}</label>
+                            {{ form.wh_code }}
+                            <div class="text-danger">{{ form.wh_code.errors }}</div>
+                        </div>
 
-{% block content %}
-            <form method="post" enctype="multipart/form-data" class="col-sm-9">
-                {% csrf_token %}
-                <div class="card p-4">
-                    <h3 class="card-title">Create Warehouse</h3>
-                    <div class="mb-3">
-                        <label for="wh_code" class="form-label">Warehouse Code</label>
-                        {{ form.wh_code }}
-                        <div class="text-danger">{{ form.wh_code.errors }}</div>
+                        <div class="mb-3">
+                            <label for="wh_name" class="form-label">{% trans "Warehouse Name" %}</label>
+                            {{ form.wh_name }}
+                            <div class="text-danger">{{ form.wh_name.errors }}</div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="wh_comment" class="form-label">{% trans "Comment" %}</label>
+                            {{ form.wh_comment }}
+                            <div class="text-danger">{{ form.wh_comment.errors }}</div>
+                        </div>
+
+                        <div class="mb-3" style="border: 1px gray solid">
+                            <label for="wh_bg" class="form-label">{% trans "Background Image" %}</label>
+                            {{ form.wh_bg }}
+                            <div class="text-danger">{{ form.wh_bg.errors }}</div>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
                     </div>
-
-                    <div class="mb-3">
-                        <label for="wh_name" class="form-label">Warehouse Name</label>
-                        {{ form.wh_name }}
-                        <div class="text-danger">{{ form.wh_name.errors }}</div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="wh_comment" class="form-label">Comment</label>
-                        {{ form.wh_comment }}
-                        <div class="text-danger">{{ form.wh_comment.errors }}</div>
-                    </div>
-
-                    <div class="mb-3" style="border: 1px gray solid">
-                        <label for="wh_bg" class="form-label">Background Image</label>
-                        {{ form.wh_bg }}
-                        <div class="text-danger">{{ form.wh_bg.errors }}</div>
-                    </div>
-
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
                 </div>
-            </form>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+            </div>
 {% endblock %}
+{% endblock %}
+    {% block js %} {{ block.super }} {% endblock %}
+
+
+
+
