--- a/src/VNEDC/warehouse/templates/warehouse/edit_warehouse.html
+++ b/src/VNEDC/warehouse/templates/warehouse/edit_warehouse.html
@@ -1,52 +1,66 @@
-{% extends 'bases/crud_form.html' %}
-{% load widget_tweaks %}
-{% load widget_tweaks %}
+{% extends 'warehouse/bases/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% load i18n %}
+{% block title %} {% trans "Edit Warehouse" %} {% endblock %}
+{% block container %}
 
-{% block content %}
-    <div class="container" style="border: 1px gray solid">
-        <h2 class="mb-4">Edit Warehouse</h2>
-
-        <!-- Hiển thị thông báo thành công hoặc lỗi -->
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endif %}
+    <div class="container mt-5">
+        <div class="row">
+            {% block sidebar %} {{ block.super }} {% endblock %}
+{#        <!-- Hiển thị thông báo thành công hoặc lỗi -->#}
+{#        {% if messages %}#}
+{#            {% for message in messages %}#}
+{#                <div class="alert alert-{{ message.tags }}">#}
+{#                    {{ message }}#}
+{#                </div>#}
+{#            {% endfor %}#}
+{#        {% endif %}#}
 
         <!-- Form để chỉnh sửa kho -->
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="wh_code" class="form-label" disabled="">Warehouse Id</label>
-                {{ form.wh_code|attr:"readonly:readonly" }}
-                <div class="text-danger">{{ form.wh_code.errors }}</div>
-            </div>
+            {% block content %}
+            <form method="post" enctype="multipart/form-data" class="col-sm-9">
+                {% csrf_token %}
+                <div class="card p-4">
+                    <h3 class="card-title">{% trans "Edit Warehouse" %}</h3>
+                    <div class="mb-3">
+                        <label for="wh_code" class="form-label" disabled="">{% trans "Warehouse Id" %}</label>
+    {#                    {% if is_readonly %}#}
+    {#                        {{ form.wh_code|add_attr:"readonly:readonly" }}#}
+    {#                    {% else %}#}
+    {#                    {% endif %}#}
+                                            {{ form.wh_code }}
+    {#                    {{ form.wh_code|attr:"readonly:readonly" }}#}
+                        <div class="text-danger">{{ form.wh_code.errors }}</div>
+                    </div>
 
-            <div class="mb-3">
-                <label for="wh_name" class="form-label">Warehouse Name</label>
-                {{ form.wh_name }}
-                <div class="text-danger">{{ form.wh_name.errors }}</div>
-            </div>
+                    <div class="mb-3">
+                        <label for="wh_name" class="form-label">{% trans "Warehouse Name" %}</label>
+                        {{ form.wh_name }}
+                        <div class="text-danger">{{ form.wh_name.errors }}</div>
+                    </div>
 
-            <div class="mb-3">
-                <label for="wh_comment" class="form-label">Comment</label>
-                {{ form.wh_comment }}
-                <div class="text-danger">{{ form.wh_comment.errors }}</div>
-            </div>
+                    <div class="mb-3">
+                        <label for="wh_comment" class="form-label">{% trans "Comment" %}</label>
+                        {{ form.wh_comment }}
+                        <div class="text-danger">{{ form.wh_comment.errors }}</div>
+                    </div>
 
-            <div class="mb-3">
-                <label for="wh_bg" class="form-label">Background Image</label>
-                {{ form.wh_bg }}
-                <div class="text-danger">{{ form.wh_bg.errors }}</div>
-            </div>
+                    <div class="mb-3">
+                        <label for="wh_bg" class="form-label">{% trans "Background Image" %}</label>
+                        {{ form.wh_bg }}
+                        <div class="text-danger">{{ form.wh_bg.errors }}</div>
+                    </div>
 
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-        </form>
+                    <button type="submit" class="btn btn-success">{% trans "Save Changes" %}</button>
+                </div>
+            </form>
 
-        <a href="{% url 'warehouse_list' %}" class="btn btn-secondary mt-3">Back to List</a>
+            {% endblock %}
+
+            <a href="{% url 'warehouse_list' %}" class="btn btn-secondary mt-3">{% trans "Back to List" %}</a>
     </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
