--- a/src/VNEDC/chart/templates/chart/achieve_rate_by_product.html
+++ b/src/VNEDC/chart/templates/chart/achieve_rate_by_product.html
@@ -5,7 +5,7 @@
 {% block head %}
 {% endblock %}
 {% block title %}
-Achievement Rate
+目標達成率 Achievement Rate
 {% endblock title %}
 {% block breadcrumb %}
 {% endblock %}
@@ -71,7 +71,7 @@ var config = {
                 max: 120, // 設定 Y 軸的上限為 120
                 title: {
                     display: true,
-                    text: 'Rate (%)'
+                    text: '目標達成率 (%)'
                 }
             }
         }
