--- a/src/VNEDC/collection/templates/collection/base.html
+++ b/src/VNEDC/collection/templates/collection/base.html
@@ -155,6 +155,9 @@ function validate(evt) {
                     <a class="box-nav-btn" href="{% url 'product_info_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
                         <i class="fa fa-info"></i>
                     </a>
+                    <a class="box-nav-btn" href="{% url 'oee_report' %}" role="button" data-bs-toggle="tooltip" data-bs-placement="right" title="{% trans 'Report' %}">
+                        <i class="fa fa-inbox"></i>
+                    </a>
                 </div>
             </div>
         </div>
