--- a/src/VNEDC/warehouse/templates/warehouse/area/area_by_warehouse.html
+++ b/src/VNEDC/warehouse/templates/warehouse/area/area_by_warehouse.html
@@ -75,7 +75,7 @@
                     </tbody>
                 </table>
                 {% else %}
-                <p>No area found.</p>
+                <p>{% trans "No area found." %}</p>
                 {% endif %}
             </div>
         </div>
