--- a/src/VNEDC/warehouse/templates/warehouse/index.html
+++ b/src/VNEDC/warehouse/templates/warehouse/index.html
@@ -72,7 +72,7 @@
                     </tbody>
                 </table>
                 {% else %}
-                <p>No warehouses found.</p>
+                <p>{% trans "No warehouses found." %}</p>
                 {% endif %}
             </div>
             {% endblock %}
