--- a/src/VNEDC/warehouse/templates/warehouse/bases/base.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bases/base.html
@@ -7,30 +7,31 @@
 {% block breadcrumb %}{% endblock %}
 
 {% block base_js %}
+    <style>
+    .custom-edit{
+
+    }
+    </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">{% endblock %}
 
 {% block ready %}{% endblock ready %}
 
 {% block container %}
     <div class="container mt-5">
-    {{ warehouse_items }}
             <div class="row">
                 {% block sidebar %}
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="list-group">
-                        <a class="btn btn-primary wh" href="{% url 'warehouse_list' %}" role="button" style="margin-bottom: 20px">{% trans "Warehouse" %}</a>
-                        <a class="btn btn-primary" href="{% url 'test' %}" role="button" style="margin-bottom: 15px">{% trans "Packaging Material WH 1F" %}</a>
-                        <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">{% trans "Finished Product WH" %}</a>
-                        <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">{% trans "Semi-finished Product WH" %}</a>
-                        <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">{% trans "Hand Mold WH" %}</a>
+                        <a class="btn btn-primary custom-edit mb-2" href="{% url "warehouse_list"%}" role="button">{% trans "Edit" %}</a>
                         {% for wh in warehouse_items %}
-                            <a class="btn btn-primary" href="#" role="button" style="margin-bottom: 15px">{{ wh }}</a>
+                            <a class="btn btn-primary custom-width mb-2" href="{% url "show_warehouse" wh.wh_code %}" role="button">{{ wh }}</a>
                         {% endfor %}
                     </div>
                 </div>
                 {% endblock %}
-
+                <div class="col-sm-10">
                 {% block content %} {% endblock %}
+                </div>
             </div>
     </div>
 
